--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,17 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.13",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.14.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "ts-node-dev": "^2.0.0"
   }
 }
